--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Title of browser</title>
 </head>
 <body>
-    <h1 title="&quot;Not the critic&quot;" style='cursor: pointer'>using html</h1>
+    <h1 title="&quot;Not the critic&quot;" 
+    style='cursor: pointer;'>
+    using html
+    </h1>
     <a title="next page html" target="_blank" href="next.html">next html</a>
     <div>
         <h3>something about html</h3>
@@ -23,6 +26,10 @@
             <li><span>&nbsp; - the non-breaking space symbol </span></li>
             <li><span>&quot;</span></li>
         </ul>
+    </div>
+    <div style='width:640px; height:480px;'>
+        <img alt="IMG logo" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/IMG_logo_%282017%29.svg" style='cursor: pointer; width:640px;
+        height:480px;'>
     </div>
     <div>
         <p id="myId" style="color: green;" class=".example">
