unordered list, ordered list

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     next html: 
                     <a title="next page html" target="_blank" href="next.html">next html</a></li>
                 <li>
-                    simbolic entity:
+                    symbolic entity:
                     <a title="source of simbolic entity" target="_blank" href="https://www.toptal.com/designers/htmlarrows/symbols/">
                         referens
                     </a> &copy;
@@ -26,6 +26,9 @@
             </ul>
         </nav>
     </header>
+    <h1>
+        All about HTML tags
+    </h1> 
     <section>
         <h2>
             section about tags
@@ -93,10 +96,21 @@
             <button>submit user</button>
         </form>
     </aside>
-    <h1 title="&quot;Not the critic&quot;" 
-    style='cursor: pointer;'>
-    using html
-    </h1>
+    
+    <div>
+        <h3>unordered list</h3>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>
+                <h4>ordered list</h4>
+                <ol>
+                    <li>JavaScript</li>
+                    <li>TypeScript</li>
+                </ol>
+            </li>
+        </ul>
+    </div>
     
     <div>
         <h3>something about html</h3>
@@ -127,7 +141,8 @@
     <div>
         ClearlyDecoded.com provides HTML, CSS, and
         Javascript tutorials that are crystal clear.
-        The content is just great (&nbsp;amazing&nbsp;)!
+        The co
+        ntent is just great (&nbsp;amazing&nbsp;)!
     </div>
     <footer>
         uladzimir 01.2023 &copy;
