--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div style="margin: 50px 0px 50px 50px">
             <label for="me" style="font-size: 24px; color: palevioletred;">Click Me</label>
-            <input id='me' type="text" style="visibility: hidden" >
+            <input id='me' type="text" style="visibility: hidden">
         </div>
         <div class="drop"
             style="width: 300px; height: 300px; border: 2px solid red; background-color: green; cursor: move;"
@@ -147,10 +147,10 @@
         </div>
         <div class="dropTarget"
             style="width: 302px; height: 302px; border: 2px solid rgb(255, 251, 0); background-color: white; margin-top: 50px">
-            <!-- <input id="dragAndDrop"  type='file' accept="text/*" multiple style="display: none"> -->
-            <!-- <label for="dragAndDrop" style="width: 50px; height: 40px"> -->
-            <!-- <img src="./dragDrop.png" alt="fileInput" style="width: 300px; height: 200px"> -->
-            <!-- </label> -->
+        </div>
+        <div style="margin: 40px">
+            <label for="color" style="font-size: 24px; color: red">color</label>
+            <input id="color" type="color" value="#ff0000">
         </div>
         <div>
             <h3>something about html</h3>
@@ -196,7 +196,7 @@
                     inputJS.click();
                 }
             }, false);
-            inputJS.addEventListener('change' , () => {
+            inputJS.addEventListener('change', () => {
                 console.log(inputJS.files);
                 console.log(inputJS.files[0].name);
                 console.log(inputJS.files[0]);
@@ -211,14 +211,28 @@
                 dropTarget.insertBefore(drop, currentEl);
             });
             // dropElement.addEventListener('dragover', (e) => {
-                // e.preventDefault();
+            // e.preventDefault();
             // })
             const me = document.querySelector('#me');
             me.addEventListener('click', (e) => {
                 me.style.display = 'block';
                 me.style.visibility = 'visible';
                 me.focus();
+            });
+
+            const color = document.querySelector('#color');
+            color.addEventListener('click', (e) => {
+                e.target.select();
             })
+            color.addEventListener('input', (e) => {
+                document.body.style.backgroundColor = e.target.value;
+                color.select();
+            });
+            color.addEventListener('change', (e) => {
+                document.body.style.backgroundColor = e.target.value;
+                color.select();
+            });
+
         </script>
     </body>
 
