send of form from html page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Title of browser</title>
+        <link rel="shortcut icon" href="idea.png" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -17,8 +19,8 @@
             <nav>
                 <ul>
                     <li>
-                        next html:
-                        <a title="next page html" target="_blank" href="next.html">next html</a>
+                        html forms:
+                        <a title="next page html" target="_blank" href="forms.html">forms html</a>
                     </li>
                     <li>
                         symbolic entity:
