work with new Range

--- a/forms.html
+++ b/forms.html
@@ -33,6 +33,10 @@
                 <button>submit</button>
             </fieldset>
         </form>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <b>Quae assumenda quis provident voluptatem!</b> Facere cupiditate numquam illo minus maiores in. Facilis debitis impedit harum animi iusto minima est quos perferendis!
+        </p>
+        <script src="script.js"></script>
     </body>
 
 </html>
