Drag and Drop on page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -131,24 +130,20 @@
                 accept="img/*, .doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" title="photo"
                 multiple style="display: none;">
         </div>
-        <div>
+        <div class="drop">
             <label for="inputLabel" style="width: 50px; height: 40px">
                 <img src="src/img/inputLabel.gif" alt="fileInput" style="width: 300px; height: 200px">
             </label>
             <div>
-                <input id="inputLabel" type='file' accept="img/*" multiple style="display: none">
+                <input id="inputLabel" type='file' accept="image/*" multiple name=upload>
             </div>
         </div>
         <div class='me'>
             <label for="me" style="font-size: 24px; color: palevioletred;">Click Me</label>
             <input id='me' type="text" style="visibility: hidden">
         </div>
-        <div class="drop"
-            style="width: 300px; height: 300px; border: 2px solid red; background-color: green; cursor: move;"
-            draggable="true">
-        </div>
-        <div class="dropTarget"
-            style="width: 302px; height: 302px; border: 2px solid rgb(255, 251, 0); background-color: white; margin-top: 50px">
+        <div id="dropRed" class="dropRed" draggable="true"></div>
+        <div class="dropTarget">
         </div>
         <div style="margin: 40px">
             <label for="color" style="font-size: 24px; color: red">color</label>
@@ -191,5 +186,4 @@
         </footer>
         <script src="src/js/index.js"></script>
     </body>
-
 </html>
