--- a/forms.html
+++ b/forms.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="shortcut icon" href="send.png" type="image/x-icon">
+        <link rel="shortcut icon" href="src/img/send.png" type="image/x-icon">
         <link rel="stylesheet" href="src/css/forms.css">
     </head>
 
