hr, br tags and theire attributes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <!-- for SEO -->
+        <meta name="description" content="This text will be on the search page">
+        <!-- for SEO -->
         <title>Title of browser</title>
         <link rel="shortcut icon" href="src/img/send.png" type="image/x-icon">
         <link rel="stylesheet" href="src/css/index.css">
@@ -33,6 +37,8 @@
         <h1>
             All about HTML tags
         </h1>
+        <hr color="red" align="center" width="50%" size="4px" noshade> 
+        <!-- this is not valid record, but it work -->
         <section>
             <h2>
                 section about tags
